GearsetPOC/force-app/main/default/objects/Hazard__c/Hazard__c.object-meta.xml
<CustomObject>
    <description>Safety Hazard Record</description>
    <label>Hazard</label>
    <nameField>
        <displayFormat>H-{000000}</displayFormat>
        <label>Hazard Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hazards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>