GearsetPOC/force-app/main/default/objects/Hazard__c/fields/EMG_Member__c.field-meta.xml
<CustomField>
    <fullName>EMG_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMG Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hazards</relationshipName>
    <type>Lookup</type>
</CustomField>