GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Exact_Location__c.field-meta.xml
<CustomField>
    <fullName>Exact_Location__c</fullName>
    <inlineHelpText>Please Enter the exact location where the incident happened ( eg: Times house - North Wing 2nd Floor)</inlineHelpText>
    <label>Exact Location</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>