GearsetPOC/force-app/main/default/objects/Hazard__c/fields/EXCO_member__c.field-meta.xml
<CustomField>
    <fullName>EXCO_member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXCO member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hazards1</relationshipName>
    <type>Lookup</type>
</CustomField>