GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Action_Implemented_On__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Action_Implemented_On__c</fullName>
    <label>Action Implemented On</label>
    <type>Date</type>
</CustomField>