GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Age__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Age__c</fullName>
    <description>Calculate age of record based on date case received</description>
    <formula>if(ISBLANK(Hazard_Date_Closed__c),
 TODAY() - Hazard_Date_received__c, 
DATEVALUE(Hazard_Date_Closed__c) - Hazard_Date_received__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days the Hazard has been open</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>