GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Anonymous_User__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Anonymous_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User wishes to remain anonymous</description>
    <label>Anonymous User</label>
    <type>Checkbox</type>
</CustomField>