GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_copy_to_1__c.field-meta.xml
<CustomField>
    <fullName>Hazard_copy_to_1__c</fullName>
    <inlineHelpText>copy this email address in on emails sent to the reporting user</inlineHelpText>
    <label>Copy to 1</label>
    <type>Email</type>
</CustomField>