GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Copy_to_2__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Copy_to_2__c</fullName>
    <inlineHelpText>copy this email address in on emails sent to the reporting user</inlineHelpText>
    <label>Copy to 2</label>
    <type>Email</type>
</CustomField>