GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Date_Closed__c</fullName>
    <description>closure date of hazard case</description>
    <label>Date Closed</label>
    <type>DateTime</type>
</CustomField>