GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Date_of_Occurance__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Date_of_Occurance__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time that hazard occured</description>
    <label>Date of Occurance</label>
    <type>DateTime</type>
</CustomField>