GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Date_reminder_sent__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Date_reminder_sent__c</fullName>
    <label>Date reminder sent</label>
    <type>Date</type>
</CustomField>