GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Date_Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Date_Time_Opened__c</fullName>
    <defaultValue>now()</defaultValue>
    <description>Date &amp; time hazard logged onto system - automatically populated on record creation</description>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
</CustomField>