GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Department__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Department__c</fullName>
    <description>department of reporting EIL user</description>
    <formula>Hazard_Reporting_User__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>