GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Department_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Department_Responsible__c</fullName>
    <label>Department Responsible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ashford International</fullName>
            </value>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Chief Executive</fullName>
            </value>
            <value>
                <fullName>Commercial Director</fullName>
            </value>
            <value>
                <fullName>Corporate Communications</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Director of Customer Services</fullName>
            </value>
            <value>
                <fullName>e320 Engineering</fullName>
            </value>
            <value>
                <fullName>Ebbsfleet</fullName>
            </value>
            <value>
                <fullName>EDC</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Environment</fullName>
            </value>
            <value>
                <fullName>Eurostar Buisness Support Centre</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Fleet Strategy</fullName>
            </value>
            <value>
                <fullName>Gare de Lille Europe</fullName>
            </value>
            <value>
                <fullName>International Fleet Performance</fullName>
            </value>
            <value>
                <fullName>Internet development - E Commerce</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>IS Customer Systems</fullName>
            </value>
            <value>
                <fullName>IS Director</fullName>
            </value>
            <value>
                <fullName>IS Distribution</fullName>
            </value>
            <value>
                <fullName>IS Operations</fullName>
            </value>
            <value>
                <fullName>IS Sales Systems</fullName>
            </value>
            <value>
                <fullName>IS Service Delivery</fullName>
            </value>
            <value>
                <fullName>IS Technology</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>On Board Service</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Operations Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>