GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Description__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Description__c</fullName>
    <label>Hazard Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>