GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Email_Managers__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Email_Managers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick to email case details to named managers on Save</inlineHelpText>
    <label>Send 1st email</label>
    <type>Checkbox</type>
</CustomField>