GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Email_TMI_Safety_Reps__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Email_TMI_Safety_Reps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email TMI Safety Reps</label>
    <type>Checkbox</type>
</CustomField>