GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Key_Manager_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Key_Manager_Contractor__c</fullName>
    <label>Key Manager Contractor</label>
    <type>Email</type>
</CustomField>