GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Key_Words__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Key_Words__c</fullName>
    <label>Key Words</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cleanliness issues</fullName>
            </value>
            <value>
                <fullName>Contractor Activity</fullName>
            </value>
            <value>
                <fullName>Fire safety</fullName>
            </value>
            <value>
                <fullName>Health Hazard</fullName>
            </value>
            <value>
                <fullName>Infrastructure Concern (Non Trackside)</fullName>
            </value>
            <value>
                <fullName>Infrastructure Concern (Trackside)</fullName>
            </value>
            <value>
                <fullName>Injury Hazard (Off Train)</fullName>
            </value>
            <value>
                <fullName>Injury Hazard (On train)</fullName>
            </value>
            <value>
                <fullName>Lack of Process</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>On Board Catering Equipment</fullName>
            </value>
            <value>
                <fullName>Overcrowding</fullName>
            </value>
            <value>
                <fullName>Passenger Activity</fullName>
            </value>
            <value>
                <fullName>Process not followed</fullName>
            </value>
            <value>
                <fullName>Security Concern</fullName>
            </value>
            <value>
                <fullName>Technical Defect (On Train)</fullName>
            </value>
            <value>
                <fullName>Technical Defect (Supplied Equipment)</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>