GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_line_manager__c.field-meta.xml
<CustomField>
    <fullName>Hazard_line_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hazards_line_manager</relationshipName>
    <type>Lookup</type>
</CustomField>