GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Origin__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paper form</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>TM App</fullName>
            </value>
            <value>
                <fullName>Intranet form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>