GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Other_department__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Other_department__c</fullName>
    <inlineHelpText>Contractor department responsible</inlineHelpText>
    <label>Other Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>