GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Other_Manager_1__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Other_Manager_1__c</fullName>
    <label>Other Manager 1</label>
    <type>Email</type>
</CustomField>