GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Priority__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Priority__c</fullName>
    <formula>IF(Hazard_Risk_Rating__c  &lt;= 6,&#39;Low&#39;,
     IF(Hazard_Risk_Rating__c &gt;6  &amp;&amp; Hazard_Risk_Rating__c  &lt;= 14,&#39;Medium&#39;,
          IF(Hazard_Risk_Rating__c &gt;14,&#39;High&#39;,&#39;Error&#39;)
          )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>