GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Probability__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Probability__c</fullName>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Very unlikely</fullName>
            </value>
            <value>
                <fullName>2 Unlikely</fullName>
            </value>
            <value>
                <fullName>3 Likely</fullName>
            </value>
            <value>
                <fullName>4 Very Likely</fullName>
            </value>
            <value>
                <fullName>5 Certain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>