GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Reporting_User__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Reporting_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>EIL person reporting hazard</description>
    <label>Reporting User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HazardsReportingUser</relationshipName>
    <type>Lookup</type>
</CustomField>