GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Response_Required_By__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Response_Required_By__c</fullName>
    <label>Response Required By</label>
    <type>Date</type>
</CustomField>