GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Risk_Rating__c</fullName>
    <description>Risk=severity*priority</description>
    <formula>VALUE(LEFT(TEXT(Hazard_Probability__c),1)) *  VALUE(LEFT(TEXT(Hazard_Severity__c),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>