GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Send_reminder_email__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Send_reminder_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send reminder email</label>
    <type>Checkbox</type>
</CustomField>