GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Hazard_Severity__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 No lost time/ minor damage</fullName>
            </value>
            <value>
                <fullName>2 Minor injury &lt;3 days off</fullName>
            </value>
            <value>
                <fullName>3 Reportable injury &gt;3 days off</fullName>
            </value>
            <value>
                <fullName>4 Major injury or damage</fullName>
            </value>
            <value>
                <fullName>5 Fatal / catastrophic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>