GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Office and station locations</description>
    <label>Hazard Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TMI</fullName>
            </value>
            <value>
                <fullName>Eurostar Business Support Centre</fullName>
            </value>
            <value>
                <fullName>Lille Eurocentre (CRE)</fullName>
            </value>
            <value>
                <fullName>Lille rue de Luxembourg</fullName>
            </value>
            <value>
                <fullName>Paris Dunkerque</fullName>
            </value>
            <value>
                <fullName>Paris Rue du Delta</fullName>
            </value>
            <value>
                <fullName>Brussels Place Marcel Broodthaers</fullName>
            </value>
            <value>
                <fullName>St Pancras</fullName>
            </value>
            <value>
                <fullName>Ebbsfleet</fullName>
            </value>
            <value>
                <fullName>Ashford</fullName>
            </value>
            <value>
                <fullName>Calais</fullName>
            </value>
            <value>
                <fullName>Lille Europe</fullName>
            </value>
            <value>
                <fullName>Brussels Midi</fullName>
            </value>
            <value>
                <fullName>Paris Gare du Nord</fullName>
            </value>
            <value>
                <fullName>Marne La Vallee</fullName>
            </value>
            <value>
                <fullName>Avignon</fullName>
            </value>
            <value>
                <fullName>Lyon Part Dieu</fullName>
            </value>
            <value>
                <fullName>Marseille St Charles</fullName>
            </value>
            <value>
                <fullName>On train</fullName>
            </value>
            <value>
                <fullName>Kings Place</fullName>
            </value>
            <value>
                <fullName>Amsterdam Central Station</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>