GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Reporting_User_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Reporting_User_Full_Name__c</fullName>
    <formula>Hazard_Reporting_User__r.FirstName  &amp; &quot; &quot; &amp;  Hazard_Reporting_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting User Full Name</label>
    <type>Text</type>
</CustomField>