GearsetPOC/force-app/main/default/objects/Hazard__c/fields/Reporting_User_Job_Tittle__c.field-meta.xml
<CustomField>
    <fullName>Reporting_User_Job_Tittle__c</fullName>
    <formula>Hazard_Reporting_User__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting User Job Tittle</label>
    <type>Text</type>
</CustomField>