GearsetPOC/force-app/main/default/objects/Hazard__c/validationRules/Email_Key_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Key_Manager</fullName>
    <active>false</active>
    <description>Can only email key manager if  either EIL or Contractor key manager is named, not both</description>
    <errorConditionFormula>AND(ISBLANK( Hazard_Key_Manager_EIL__c),  ISBLANK( Hazard_Key_Manager_Contractor__c))</errorConditionFormula>
    <errorMessage>You must set either the EIL Key Manager, or the Contractor key manager, not both</errorMessage>
</ValidationRule>