GearsetPOC/force-app/main/default/objects/Hazard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hazard_Origin__c</columns>
    <columns>Hazard_Date_of_Occurance__c</columns>
    <columns>Hazard_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Hazard_Subject__c</columns>
    <columns>Hazard_Reporting_User__c</columns>
    <columns>Hazard_Reporting_Contractor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Hazards</label>
    <language>en_US</language>
</ListView>