GearsetPOC/force-app/main/default/objects/Hazard__c/listViews/Hazards_Queue_Hazard.listView-meta.xml
<ListView>
    <fullName>Hazards_Queue_Hazard</fullName>
    <filterScope>Queue</filterScope>
    <label>Hazards Team</label>
    <queue>Hazards_Queue</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>