GearsetPOC/force-app/main/default/objects/Hazard__c/listViews/New_hazards_submitted_from_intrnaet.listView-meta.xml
<ListView>
    <fullName>New_hazards_submitted_from_intrnaet</fullName>
    <columns>NAME</columns>
    <columns>Hazard_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Hazard_Date_Time_Opened__c</columns>
    <columns>Hazard_Date_of_Occurance__c</columns>
    <columns>Hazard_Subject__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hazard_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New hazards submitted from intranet</label>
    <language>en_US</language>
</ListView>